[package]
name = "tiktoken"
version = "0.10.0"
edition = "2021"
rust-version = "1.57.0"

[lib]
name = "tiktoken"
crate-type = ["cdylib", "staticlib", "rlib"]


[features]
default = ["python"]
python = [
    "pyo3",
]
uniffi = ["dep:uniffi", "uniffi_bindgen", "camino", "thiserror", "base64"]

[dependencies]
pyo3 = { version = "0.22.2", default-features = false, features = [
    "extension-module",
    "macros",
], optional = true }

# tiktoken dependencies
fancy-regex = "0.13.0"
regex = "1.10.3"
rustc-hash = "1.1.0"
bstr = "1.5.0"

# UniFFI dependencies (optional)
uniffi = { version = "0.29", features = ["build"], optional = true }
thiserror = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
uniffi_bindgen = { version = "0.29", optional = true }
camino = { version = "1.1", optional = true }

[build-dependencies]
uniffi = { version = "0.29", features = ["bindgen"] }
uniffi_build = { version = "0.29" }
uniffi_bindgen = { version = "0.29" }
camino = { version = "1.1" }

