[package]
name = "tiktoken_core"
version = "0.4.0"
edition = "2021"
rust-version = "1.57.0"

[lib]
name = "_tiktoken_core"
crate-type = ["lib"]

[dependencies]
# tiktoken dependencies
fancy-regex = "0.10.0"
regex = "1.7.0"
rustc-hash = "1.1.0"
bstr = "1.0.1"

[features]
default = []
multithreading = []