[package]
name = "tiktoken_jni"
version = "0.2.0"
edition = "2021"
rust-version = "1.57.0"

[lib]
name = "_tiktoken_jni"
crate-type = ["cdylib"]

[dependencies]
tiktoken_core = { path = "../core" }
rustc-hash = "1.1.0"
jni = "0.20.0"

[profile.release]
incremental = true
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*