[package]
name = "tiktoken_js"
version = "0.2.0"
edition = "2021"
rust-version = "1.57.0"

[lib]
name = "tiktoken"
crate-type = ["cdylib"]

[dependencies]
tiktoken_core = { path = "../core", features = [] }
# tiktoken dependencies
fancy-regex = "0.10.0"
regex = "1.7.0"
rustc-hash = "1.1.0"
bstr = "1.0.1"
wasm-bindgen = "0.2.83"
anyhow = "1.0.69"
base64 = "0.21.0"
gloo-utils = { version = "0.1", features = ["serde"] }

[features]
default = ["inline"]
inline = []