[package]
name = "tiktoken"
version = "0.2.0"
edition = "2021"
rust-version = "1.57.0"

[lib]
name = "_tiktoken"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
tiktoken_core = { path = "../core", features = ["multithreading"] }
rustc-hash = "1.1.0"
