[package]
name = "tiktoken_js"
version = "0.3.3"
edition = "2021"
rust-version = "1.57.0"

[lib]
name = "tiktoken"
crate-type = ["cdylib"]

[dependencies]
tiktoken_core = { path = "../core", features = [] }
# tiktoken dependencies
fancy-regex = "0.11.0"
regex = "1.8.3"
rustc-hash = "1.1.0"
bstr = "1.5.0"
wasm-bindgen = "0.2.83"
anyhow = "1.0.69"
base64 = "0.21.0"
gloo-utils = { version = "0.1", features = ["serde"] }

[features]
default = ["inline"]
inline = []

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O', '']

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']
